Replaces ExecutorService with virtual thread executor
Switches to using a virtual thread per task executor for improved
concurrency management and performance. This change enables more
efficient handling of concurrent tasks by leveraging lightweight
virtual threads.

Relates to stream-testing-updates